[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/tutorial_map/tut_map.png" type="Texture" id=1]
[ext_resource path="res://Assets/tutorial_map/tut_mountain.png" type="Texture" id=2]
[ext_resource path="res://Assets/tutorial_map/tut_background_tree.png" type="Texture" id=3]
[ext_resource path="res://Assets/tutorial_map/tut_stars.png" type="Texture" id=4]
[ext_resource path="res://Assets/tutorial_map/tut_foreground_tree.png" type="Texture" id=5]
[ext_resource path="res://Scenes/player/player.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/tutorial_map/tut_fence.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Tutorial/tutorial.gd" type="Script" id=8]
[ext_resource path="res://Assets/tutorial_map/log2.png" type="Texture" id=9]
[ext_resource path="res://Scenes/textBox/textBox.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/tutorial_map/tut_moon.png" type="Texture" id=11]
[ext_resource path="res://Assets/ben-character/mc_sword.png" type="Texture" id=12]
[ext_resource path="res://Assets/tutorial_map/tut_clouds.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Tutorial/ParallaxCloud.gd" type="Script" id=14]
[ext_resource path="res://Assets/tutorial_map/tut_cart.png" type="Texture" id=15]
[ext_resource path="res://Assets/DarknessLighter.png" type="Texture" id=16]
[ext_resource path="res://Assets/Confuzzle/confuzzle0007.png" type="Texture" id=17]
[ext_resource path="res://Assets/Confuzzle/confuzzle0005.png" type="Texture" id=18]
[ext_resource path="res://Assets/Confuzzle/confuzzle0000.png" type="Texture" id=19]
[ext_resource path="res://Assets/Confuzzle/confuzzle0008.png" type="Texture" id=20]
[ext_resource path="res://Assets/Confuzzle/confuzzle0002.png" type="Texture" id=21]
[ext_resource path="res://Assets/Confuzzle/confuzzle0010.png" type="Texture" id=22]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6567, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 193.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 135 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 21 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.6717, 161.12 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 36.25, 26.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 57.5, 158 )

[sub_resource type="Animation" id=11]
resource_name = "BLIIIINK_BLIIIIIINK"
length = 3.2
tracks/0/type = "value"
tracks/0/path = NodePath("Black:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8, 1, 1.2, 1.7, 1.9, 2, 2.8, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "BLINK"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Black:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "BLINKBLINK"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Black:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7, 0.8, 1.1, 1.2, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Black:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="tutorial" type="Node2D"]
script = ExtResource( 8 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = 128

[node name="Button" type="Button" parent="HUD"]
visible = false
margin_left = 1127.0
margin_top = 653.0
margin_right = 1235.0
margin_bottom = 685.0
text = "SKIP TUTORIAL"

[node name="Timer" type="Timer" parent="HUD"]
wait_time = 3.0
one_shot = true

[node name="Darkness" type="Light2D" parent="."]
position = Vector2( 6318, -242 )
scale = Vector2( 2.74444, 1.52396 )
texture = ExtResource( 16 )
texture_scale = 3.0
color = Color( 0.870588, 0.870588, 0.870588, 0.756863 )
mode = 1
range_item_cull_mask = 3

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxStar" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.05, 1 )
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxStar"]
texture = ExtResource( 4 )
centered = false

[node name="ParallaxMoon" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.05, 1 )
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxMoon"]
position = Vector2( 394, 16 )
texture = ExtResource( 11 )
centered = false

[node name="ParallaxCloud" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.04, 1 )
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxCloud"]
modulate = Color( 1, 1, 1, 0.529412 )
self_modulate = Color( 0.796078, 0.796078, 0.796078, 1 )
texture = ExtResource( 13 )
centered = false

[node name="ParallaxMountain" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxMountain"]
self_modulate = Color( 0.827451, 0.827451, 0.827451, 1 )
texture = ExtResource( 2 )
centered = false

[node name="ParallaxB_tree" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 1 )
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxB_tree"]
texture = ExtResource( 3 )
centered = false

[node name="ParallaxF_tree" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxF_tree"]
self_modulate = Color( 0.831373, 0.831373, 0.831373, 1 )
texture = ExtResource( 5 )
centered = false

[node name="road" type="TextureRect" parent="."]
margin_right = 14080.0
margin_bottom = 720.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -27, 330 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 6086, 368 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 5999, -24 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 964, 173.5 )
shape = SubResource( 2 )

[node name="NoPass" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2549, 177 )
shape = SubResource( 6 )

[node name="NoPass2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3250, 175 )
shape = SubResource( 6 )

[node name="NoPass3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 5170, 170 )
shape = SubResource( 6 )

[node name="fence_top" type="TextureRect" parent="."]
margin_right = 14080.0
margin_bottom = 720.0
texture = ExtResource( 7 )
stretch_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 719.0
margin_right = 14080.0
margin_bottom = 1439.0
color = Color( 0.0156863, 0.0509804, 0.0235294, 1 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 1052, 500 )
scale = Vector2( 0.797615, 0.81306 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="confuzzle" type="AnimatedSprite" parent="Player"]
visible = false
position = Vector2( 0, -45 )
frames = SubResource( 7 )
frame = 2
playing = true

[node name="fence_bot" type="TextureRect" parent="."]
margin_top = 322.0
margin_right = 14080.0
margin_bottom = 1042.0
texture = ExtResource( 7 )
stretch_mode = 2

[node name="roadblock" type="TextureRect" parent="."]
modulate = Color( 0.533333, 0.533333, 0.533333, 1 )
margin_left = 771.0
margin_top = 472.0
margin_right = 921.0
margin_bottom = 622.0
rect_rotation = -26.9
texture = ExtResource( 9 )
stretch_mode = 5

[node name="cart" type="TextureRect" parent="."]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 421.0
margin_top = 215.0
margin_right = 621.0
margin_bottom = 365.0
rect_scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 15 )

[node name="FOG" type="Node2D" parent="."]

[node name="fog" type="ParallaxBackground" parent="FOG"]
layer = 125

[node name="ParallaxCloud" type="ParallaxLayer" parent="FOG/fog"]
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="FOG/fog/ParallaxCloud"]
modulate = Color( 1, 1, 1, 0.254902 )
self_modulate = Color( 0.796078, 0.796078, 0.796078, 1 )
position = Vector2( -6, 297 )
texture = ExtResource( 13 )
centered = false

[node name="ParallaxCloud2" type="ParallaxLayer" parent="FOG/fog"]
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="FOG/fog/ParallaxCloud2"]
modulate = Color( 1, 1, 1, 0.254902 )
self_modulate = Color( 0.796078, 0.796078, 0.796078, 1 )
position = Vector2( 31, 393 )
texture = ExtResource( 13 )
centered = false

[node name="ParallaxCloud3" type="ParallaxLayer" parent="FOG/fog"]
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="FOG/fog/ParallaxCloud3"]
modulate = Color( 1, 1, 1, 0.254902 )
self_modulate = Color( 0.796078, 0.796078, 0.796078, 1 )
position = Vector2( 1, 495 )
texture = ExtResource( 13 )
centered = false

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
layer = 124
visible = false
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )

[node name="ParallaxF_tree" type="ParallaxLayer" parent="ParallaxForeground"]
motion_scale = Vector2( 1, 0.5 )
motion_mirroring = Vector2( 1280, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxForeground/ParallaxF_tree"]
self_modulate = Color( 0.843137, 0.843137, 0.843137, 1 )
texture = ExtResource( 5 )
centered = false

[node name="ParallaxCloud" type="ParallaxLayer" parent="ParallaxForeground"]
motion_scale = Vector2( 1, 0.5 )
motion_mirroring = Vector2( 1280, 0 )
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="ParallaxForeground/ParallaxCloud"]
modulate = Color( 1, 1, 1, 0.254902 )
self_modulate = Color( 0.796078, 0.796078, 0.796078, 1 )
position = Vector2( -47.5, 91.5 )
texture = ExtResource( 13 )
centered = false

[node name="textBox" parent="." instance=ExtResource( 10 )]
visible = false

[node name="blocked_road_detector" type="Area2D" parent="."]
position = Vector2( 1103, 455 )
scale = Vector2( 0.797615, 0.81306 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocked_road_detector"]
position = Vector2( -197.464, 94.7039 )
scale = Vector2( 1, 0.999999 )
shape = SubResource( 3 )

[node name="sword_pickup" type="Area2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="sword_pickup"]
margin_left = 2518.0
margin_top = 393.0
margin_right = 2618.0
margin_bottom = 593.0
rect_rotation = 45.0
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword_pickup"]
position = Vector2( 2462.25, 516 )
shape = SubResource( 4 )

[node name="sword_notice" type="Area2D" parent="."]
position = Vector2( 1127, 653 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword_notice"]
position = Vector2( 1195, -150 )
shape = SubResource( 6 )

[node name="sword_notice2" type="Area2D" parent="."]
position = Vector2( 1351, 653 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="sword_notice2"]
position = Vector2( 1163, -146 )
shape = SubResource( 6 )

[node name="skele_block" type="Area2D" parent="."]
position = Vector2( 2803, 519 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="skele_block"]
position = Vector2( 412, -14 )
shape = SubResource( 6 )

[node name="imposta_block" type="Area2D" parent="."]
position = Vector2( 4724, 514 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="imposta_block"]
position = Vector2( 412, -14 )
shape = SubResource( 6 )

[node name="imposta_notice" type="Area2D" parent="."]
position = Vector2( 3364, 652 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="imposta_notice"]
position = Vector2( 1195, -150 )
shape = SubResource( 6 )

[node name="cave" type="Area2D" parent="."]
position = Vector2( 2893, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="cave"]
position = Vector2( 4175, 504 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="cave"]
position = Vector2( 6195, 500 )
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="cave"]
position = Vector2( 8345, 497 )
shape = SubResource( 5 )

[node name="Blink(#Blackpink_Fan)" type="CanvasLayer" parent="."]
layer = 127

[node name="Black" type="ColorRect" parent="Blink(#Blackpink_Fan)"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Blink(#Blackpink_Fan)"]
anims/BLIIIINK_BLIIIIIINK = SubResource( 11 )
anims/BLINK = SubResource( 8 )
anims/BLINKBLINK = SubResource( 10 )
anims/RESET = SubResource( 9 )

[connection signal="pressed" from="HUD/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="HUD/Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="blocked_road_detector" to="." method="_on_blocked_road_detector_area_entered"]
[connection signal="area_entered" from="sword_pickup" to="." method="_on_sword_pickup_area_entered"]
[connection signal="area_entered" from="sword_notice" to="." method="_on_sword_notice_area_entered"]
[connection signal="area_entered" from="sword_notice2" to="." method="_on_sword_notice2_area_entered"]
[connection signal="area_entered" from="skele_block" to="." method="_on_skele_block_area_entered"]
[connection signal="area_entered" from="imposta_block" to="." method="_on_imposta_block_area_entered"]
[connection signal="area_entered" from="imposta_notice" to="." method="_on_imposta_notice_area_entered"]
[connection signal="area_entered" from="cave" to="." method="_on_cave_area_entered"]
